# Sem2_Lab8

./: CMakeLists.txt  Lab8.cpp  README.md
example/: CMakeLists.txt  main.cpp
include/: Sem2_Lab8.hpp
sources/: Sem2_Lab8.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp
